# wool

./: CMakeLists.txt  README.md  test.cpp
include/: wool.h
src/: wool.cpp
